# advent-of-code2021

./: .gitignore  Cargo.toml  README.md
core/src/: lib.rs  utils.rs
days/: gen.sh
days/day1/: Cargo.toml
days/day1/src/: main.rs
days/day10/: Cargo.toml
days/day10/src/: main.rs  part1.rs  part2.rs  shared.rs
days/day11/: Cargo.toml
days/day11/src/: main.rs  part1.rs  part2.rs  shared.rs
days/day12/: Cargo.toml
days/day12/src/: lib.rs  main.rs  part1.rs  part2.rs  shared.rs  tree.rs
days/day13/: Cargo.toml
days/day13/src/: main.rs  part1.rs  part2.rs  shared.rs
days/day14/: Cargo.toml
days/day14/src/: main.rs  part1.rs  part2.rs  shared.rs
days/day15/: Cargo.toml
days/day15/src/: main.rs  part1.rs  part2.rs  shared.rs
days/day16/: Cargo.toml
days/day16/src/: main.rs  part1.rs  part2.rs  shared.rs
days/day17/: Cargo.toml
days/day17/src/: main.rs  part1.rs  part2.rs  shared.rs
days/day2/: Cargo.toml
days/day2/src/: main.rs
days/day3/: Cargo.toml
days/day3/src/: main.rs  part1.rs  part2.rs
days/day4/: Cargo.toml
days/day4/src/: main.rs  part1.rs
days/day5/: Cargo.toml
days/day5/src/: main.rs  part1.rs
days/day6/: Cargo.toml
days/day6/src/: main.rs  part1.rs  part2.rs
days/day7/: Cargo.toml
days/day7/src/: main.rs  part1.rs  part2.rs
days/day8/: Cargo.toml
days/day8/src/: main.rs  part1.rs  part2.rs
days/day9/: Cargo.toml
days/day9/src/: main.rs  part1.rs  part2.rs
