[package]
name = "day13"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
core = { path = "../../core" }
tokio = { version = "1", features = ["full"] }
regex = "1.5.4"
lazy_static = "1.4.0"
array2d = "0.2.1"